--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,29 @@
-name: Firebase Continuous Deployment
+name: CI
+
+on:
+  push:
+    branches:
+    - master
+    - release/*
+
 jobs:
-  deploy:
+  firebase-deploy:
+
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4       # Стабильная версия
-      - uses: actions/setup-node@v4     # Стабильная версия
-      # ...
-      - uses: w9jds/firebase-action@v3  # Исправлено на v3
-        with:
-          args: deploy --only hosting
-        env:
+    - uses: actions/checkout@master
+    - uses: actions/setup-node@master
+      with:
+        node-version: '10.x'
+    - run: npm install
+    - run: npm run build:prod
+    - uses: w9jds/firebase-action@master
+      with:
+        args: deploy --only hosting
+      env:
+        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+  
+
+
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
